# charm

./: .gitignore  README.md
dotnet/: Program.cs  README.md  csharp-fhir-client.csproj
java/DocumentTools/: README.md  exampleDoc.xml  pom.xml  script.py
java/DocumentTools/repo/lpg/runtime.java/: maven-metadata-local.xml  maven-metadata-local.xml.md5  maven-metadata-local.xml.sha1
java/DocumentTools/repo/org/eclipse.emf.common/: maven-metadata-local.xml  maven-metadata-local.xml.md5  maven-metadata-local.xml.sha1
java/DocumentTools/repo/org/eclipse.emf.ecore/: maven-metadata-local.xml  maven-metadata-local.xml.md5  maven-metadata-local.xml.sha1
java/DocumentTools/repo/org/eclipse.emf.ecore.xmi/: maven-metadata-local.xml  maven-metadata-local.xml.md5  maven-metadata-local.xml.sha1
java/DocumentTools/repo/org/eclipse.mdht.emf.runtime/: maven-metadata-local.xml  maven-metadata-local.xml.md5  maven-metadata-local.xml.sha1
java/DocumentTools/repo/org/eclipse.mdht.uml.cda/: maven-metadata-local.xml  maven-metadata-local.xml.md5  maven-metadata-local.xml.sha1
java/DocumentTools/repo/org/eclipse.mdht.uml.hl7.datatypes/: maven-metadata-local.xml  maven-metadata-local.xml.md5  maven-metadata-local.xml.sha1
java/hapi-fhir-starter/: README.md  pom.xml
samples/node/: README.md  allResources.json  index.js  package-lock.json  package.json  patient.json  person.json
samples/python/: README.md  pyproject.toml  python_client.py  requirements.txt
test-app/: README.md  package-lock.json  package.json
test-app/pages/: index.js
test-app/particle/: index.js
(+123 files in other folders)
