[tool.poetry]
name = "charm-sample"
version = "0.1.0"
description = ""
authors = ["Sam Hoffman <sam.hoffman@particlehealth.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pip = "^22.2.2"
install = "^1.3.5"
fhirclient = "^4.1.0"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
